--- a/index.html
+++ b/index.html
@@ -1,11 +1,42 @@
 <!DOCTYPE HTML>
 <html lang="en-us">
     <head>
-        <meta charset="utf-8">
-        <title></title>
+        <meta charset="utf-8"/>
+        <meta name="description" content="Assignment portal for Jared Michael Moore in WDD 230: Web Frontend Development at Brigham Young University - Idaho"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>
+            WDD 230 Assignment Portal
+        </title>
     </head>
     <body>
-        
+        <div id="header">
+            <header>
+                <h1>
+                    Jared Michael Moore
+                </h1>
+                <img
+                src="https://cdn.glitch.com/d297c4f6-a026-4325-aa32-b61aa8e88e78%2FProfile.jpg?v=1600537453703"
+                alt="Picture of me"
+                width="500px"
+                />
+            </header>
+        </div>
+        <div class="content">
+            <h2>
+                Assignment Links:
+            </h2>
+            <li>
+                <a href=""></a>
+            </li>
+        </div>
+        <div class="footer">
+            <p>
+                &copy; 2021 | Jared Michael Moore | Seattle | BYUI Online Learning
+            </p>
+            <p>
+                Last updated: 18 September 2021 at 16:04
+            </p>
+        </div>      
     </body>
     <script>
 
