--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en-us">
     <head>
+        <link rel="stylesheet" href="style.css">
         <meta charset="utf-8"/>
         <meta name="description" content="Assignment portal for Jared Michael Moore in WDD 230: Web Frontend Development at Brigham Young University - Idaho"/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,8 +16,8 @@
                     Jared Michael Moore
                 </h1>
                 <img
-                src="https://cdn.glitch.com/d297c4f6-a026-4325-aa32-b61aa8e88e78%2FProfile.jpg?v=1600537453703"
-                alt="Picture of me"
+                src="https://raw.githubusercontent.com/ReedemtheD3ad/wdd230/master/Profile.jpg"
+                alt="Photo of me"
                 width="500px"
                 />
             </header>
