Add link to Week 2 assignment.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 Assignment Links:
             </h2>
             <li>
-                <a href=""></a>
+                <a href="lesson2/design-principles.html">Design Principles</a>
             </li>
         </div>
         <div class="footer">
