Add normalize and fix links.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE HTML>
 <html lang="en-us">
     <head>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/noramalize.css">
+        <link rel="stylesheet" href="css/style.css">
         <meta charset="utf-8"/>
         <meta name="description" content="Assignment portal for Jared Michael Moore in WDD 230: Web Frontend Development at Brigham Young University - Idaho"/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,7 +17,7 @@
                     Jared Michael Moore
                 </h1>
                 <img
-                src="https://raw.githubusercontent.com/ReedemtheD3ad/wdd230/master/Profile.jpg"
+                src="https://raw.githubusercontent.com/ReedemtheD3ad/wdd230/master/Images/Profile.jpg"
                 alt="Photo of me"
                 width="500px"
                 />
