--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -1,7 +1,8 @@
 <!DOCTYPE HTML>
 <html lang="en-us">
     <head>
-        <link rel="stylesheet" href="lesson2/css/style.css">
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/style.css">
         <meta charset="utf-8"/>
         <meta name="description" content="Design Principles Assignment - Week 2"/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
