--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -20,10 +20,39 @@
         </div>
         <div class="content">
             <h2>
+                Offiical Terraria Wiki
             </h2>
-            <li>
-                <a href=""></a>
-            </li>
+            <img
+                src="https://raw.githubusercontent.com/ReedemtheD3ad/wdd230/master/lesson2/images/Terraria%20Wiki%20Mobile.png"
+                alt="Official Terraria Wiki Mobile site"
+                width="1000px"
+            />
+            <a href="https://terraria.fandom.com/wiki/Terraria_Wiki?mobileaction=toggle_view_mobile">Link to Mobile Site</a>
+            <p>
+                The Official Terraria Wiki powered by Fandom is a great Example of White Space and Clean Design. Not much is going on other than what the user needs to see, so it is free of distractions. There is still plenty of whitespace to prevent content from becoming too crowded. The styles used are sinmple, clean, and effective.
+            </p>
+            <h2>
+                Google
+            </h2>
+            <img
+                src="https://raw.githubusercontent.com/ReedemtheD3ad/wdd230/master/lesson2/images/Google%20Mobile.png"
+                alt="Google Mobile site"
+                width="1000px"
+            />
+            <p>
+                The Google homepage is a great example of Hick's Law. There isn't much on the page but what exactly the user needs, so they really only have one thing to focus on: the Search. There is still access to much more of what Google has to offer, but the main focus is what most users are there for.
+            </p>
+            <h2>
+                Reddit
+            </h2>
+            <img
+                src="https://github.com/ReedemtheD3ad/wdd230/blob/master/lesson2/images/Reddit%20Mobile.png"
+                alt="Reddit Mobile site"
+                width="1000px"
+            />
+            <p>
+                The Reddit mobile website shows alignment very well. All the text (post tile and description) are left aligned while the media content is right aligned. This keeps the posts well organized and easy to browse.
+            </p>
         </div>
         <div class="footer">
             <p>
