--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -1,1 +1,52 @@
+<!DOCTYPE html>
+<html lang="en-us">
+  <head>
+    <meta charset="utf-8" />
+    <title>Site Plan</title>
+    <link rel="stylesheet" href="css/noramalize.css">
+    <link rel="stylesheet" href="css/style.css">
+  </head>
+  <body>
+    <header>
+      <h1>Atmo Point Site Plan</h1>
+      <h2>Jared Moore</h2>
+      <h2>WDD 230</h2>
+    </header>
+    <main>
+      <h2>Overview</h2>
+      <hr/>
+      <h3>Domain</h3>
+      <p>
+        atmopoint.com
+      </p>
+      <h3>Purpose</h3>
+      <p>
+        To provide users with up to date information about local and global weather and locate information about weather types and patterns.
+      </p>
+      <h3>Target Audience</h3>
+      <p>
+        Visit this link: <a href="target-audience.html">Taregt Audience</a>
+      </p>
 
+      <h2>Branding</h2>
+      <h3>Website Logo</h3>
+      <img src="images/dryoarlogo.png" alt="Logo image" />
+      <hr />
+      <h2>
+        Style Guide
+      </h2>
+      <h3>
+        Color Scheme
+      </h3>
+      <p>
+        Visit this link: <a href="color-scheme.html">Taregt Audience</a>
+      </p>
+      <h3>
+        Typography
+      </h3>
+      <p>
+        Visit this link: <a href="typography.html">Typography</a>
+      </p>
+    </main>
+  </body>
+</html>
