add week 3 assignment link.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
             <li>
                 <a href="lesson2/design-principles.html">Design Principles</a>
             </li>
+            <li>
+                <a href="lesson3/index.html">Weather Site Plan</a>
+            </li>
         </div>
         <div class="footer">
             <p>
