--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -27,10 +27,9 @@
       <p>
         Visit this link: <a href="target-audience.html">Taregt Audience</a>
       </p>
-
       <h2>Branding</h2>
       <h3>Website Logo</h3>
-      <img src="images/dryoarlogo.png" alt="Logo image" />
+      <img src="https://raw.githubusercontent.com/ReedemtheD3ad/wdd230/master/lesson3/images/Vortex.png" alt="Logo image" />
       <hr />
       <h2>
         Style Guide
