--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -38,7 +38,7 @@
         Color Scheme
       </h3>
       <p>
-        Visit this link: <a href="color-scheme.html">Taregt Audience</a>
+        Visit this link: <a href="color-scheme.html">Color Scheme</a>
       </p>
       <h3>
         Typography
