add week 4 link

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
             <li>
                 <a href="lesson3/index.html">Weather Site Plan</a>
             </li>
+            <li>
+                <a href="lesson4/preston-4.html">Preston Weather Site Page Plan</a>
+            </li>
         </div>
         <div class="footer">
             <p>
