--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/noramalize.css">
-    <link rel="stylesheet" type="text/css" href="css4/small.css">
-    <link rel="stylesheet" type="text/css" href="css4/medium.css">
-    <link rel="stylesheet" type="text/css" href="css4/large.css">
+    <link rel="stylesheet" type="text/css" href="css/small.css">
+    <link rel="stylesheet" type="text/css" href="css/medium.css">
+    <link rel="stylesheet" type="text/css" href="css/large.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="City of PReston Weather Site Page">
     <title>Preston, Idaho Weather</title>
   </head>
   <body>
     <header>
-      <img src="images/Vortex.png" alt="logo">
+      <img src="images/Vortex.png" width="75px" alt="logo">
       <h1>AtmoPoint</h1>
     </header>
           <nav class="clearfix">
