--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -27,7 +27,7 @@
             </ul>
          </nav>
       <main>
-       <h2 class="h2main">Buenos Aires</h2>
+       <h2 class="h2main">Preston, Idaho</h2>
        <div class="contentbox">Weather summary</div>
        <div class="contentbox">Five days</div>
        <div class="contentbox">Article</div>
