--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -31,7 +31,7 @@
        <div class="contentbox">Weather summary</div>
        <div class="contentbox">Five days</div>
        <div class="contentbox">Article</div>
-       <div class="contentbox">Contact information</div>
+       <div class="contentbox2">Contact information</div>
       </main>
       <footer>
         <p> &copy; 2021 | Jared Michael Moore | Seattle | BYUI Online Learning </p>
